fix button row on narrow widths

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -59,14 +59,37 @@ input {
   margin-top: 15px;
 }
 
+.button-row button {
+  margin-left: 20px;
+}
+.button-row button:first-child {
+  margin-left: 0px;
+}
+
 .alert {
   color: $red;
   margin-top: 10px;
 }
 
 @media screen and (max-width:550px) {
-
   .main-text {
     width: 100%;
+  }
+}
+
+@media screen and (max-width:360px) {
+  .main-text {
+    width: 100%;
+  }
+
+
+  .button-row button {
+    margin-top: 20px;
+    margin-left: 0px;
+    display: block;
+  }
+
+  .button-row button:first-child {
+    margin-top: 0px;
   }
 }
